--- a/2_Ще_трохи_математики.ipynb
+++ b/2_Ще_трохи_математики.ipynb
@@ -1,21 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "2. Ще трохи математики",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -41,6 +24,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -48,22 +32,20 @@
         "id": "csfYPusD0mWX",
         "outputId": "2fd0d9e4-9440-49e1-ea07-47c68f7b5a09"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Радіус дорівнює  1.262 см\n"
+          ]
+        }
+      ],
       "source": [
         "from math import sqrt,pi\n",
         "S = float(input('Введіть площу кола: '))\n",
         "r = sqrt(S/pi)\n",
         "print ('Радіус дорівнює %6.3f см' %r)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Введіть площу кола: 25\n",
-            "Радіус дорівнює  2.821 см\n"
-          ]
-        }
       ]
     },
     {
@@ -84,14 +66,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "sTFMO4Xp3fgO"
       },
-      "source": [
-        ""
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "8.410441740067203\n"
+          ]
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "V = float(4 / 3 * pi * r ** 3)\n",
+        "print(V)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -111,14 +102,41 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "8yhfAwYm5E_z"
       },
-      "source": [
-        ""
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Введіть температуру:\n",
+            "16.0\n",
+            "Введіть шкалу за якою була введена температура(C/F):\n",
+            "C\n",
+            "Температура в Фаренгейтах: 60.8\n"
+          ]
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "print(\"Введіть температуру:\")\n",
+        "temp = float(input())\n",
+        "print(temp)\n",
+        "print(\"Введіть шкалу за якою була введена температура(C/F):\")\n",
+        "scale = input()\n",
+        "print(scale)\n",
+        "\n",
+        "if scale == \"F\" or scale == \"C\":\n",
+        "    if scale == \"C\":\n",
+        "        f = temp * 1.8 + 32\n",
+        "        print(f\"Температура в Фаренгейтах: {f}\")\n",
+        "    else:\n",
+        "        c = (temp - 32) * 0.5556\n",
+        "        print(f\"Температура в Цельсіях: {c}\")\n",
+        "else:\n",
+        "    print(\"Ви ввели не дійсне значення!\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -129,5 +147,31 @@
         "Ще більше простих вправ з Python - [тут](https://www.w3resource.com/python-exercises/python-basic-exercises.php)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "2. Ще трохи математики",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.1"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
